welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:5: error: '=' expected but ';' found.
  for (i <- 0 to last){
^